add GET /reserve with query params (#213)
* add GET /reserve and GET /reservation with many query params + docs + test
---------
