# server/src/main/kotlin/org/tod87et/roomkn/server/database/Database.kt
@@ -21,8 +21,32 @@ interface Database {
     fun updateRoom(roomId: Int, roomInfo: NewRoomInfo): Result<Unit>
     fun updateRoomPartially(roomId: Int, roomInfo: NewRoomInfoWithNull): Result<Unit>
     fun deleteRoom(roomId: Int): Result<Unit>
-    fun getRoomReservations(roomId: Int, limit: Int = Int.MAX_VALUE, offset: Long = 0L): Result<List<Reservation>>
-    fun getUserReservations(userId: Int, limit: Int = Int.MAX_VALUE, offset: Long = 0L): Result<List<Reservation>>
+    fun getRoomReservations(
+        roomId: Int,
+        from: Instant? = null,
+        until: Instant? = null,
+        limit: Int = Int.MAX_VALUE,
+        offset: Long = 0L
+    ): Result<List<Reservation>>
+
+    fun getUserReservations(
+        userId: Int,
+        from: Instant? = null,
+        until: Instant? = null,
+        limit: Int = Int.MAX_VALUE,
+        offset: Long = 0L
+    ): Result<List<Reservation>>
+
+    @Suppress("LongParameterList")
+    fun getReservations(
+        usersIds: List<Int>,
+        roomsIds: List<Int>,
+        from: Instant? = null,
+        until: Instant? = null,
+        limit: Int = Int.MAX_VALUE,
+        offset: Long = 0L
+    ): Result<List<Reservation>>
+
     fun getReservation(reservationId: Int): Result<Reservation>
     fun updateReservation(reservationId: Int, from: Instant, until: Instant): Result<Unit>
     fun deleteReservation(reservationId: Int): Result<Unit>
